src/test/deca/syntax/invalid/affectation-tripleEqual.synt
affectation-tripleEqual.deca:4: